# rever

./: .gitattributes  .gitignore  pyproject.toml  rever.xsh
.github/workflows/: doc.yml  test.yml
docs/: authorship.rst  conf.py
docs/api/activities/: gcloud.rst  index.rst
news/: 269-pixi.rst  fixup.rst
rever/: conda.xsh  vcsutils.xsh
rever/activities/: authors.xsh  changelog.xsh
tests/: test_appimage.py
