[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "re-ver"
version = "0.5.1"
description = "Release Versions of Software"
readme = "README.rst"
requires-python = ">=3.4"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "Anthony Scopatz" },
  # Somewhat randomly, we list everybody who contributed at least 100 lines of
  # code here in alphabetical order.
  { name = "Aaron Meurer" },
  { name = "Christopher J. 'CJ' Wright" },
  { name = "Hadrien Mary" },
  { name = "Julian Rüth", email = "julian.rueth@fsfe.org" },
  { name = "Robert J Koch" },
]
maintainers = [
  { name = "Anthony Scopatz" },
  { name = "Julian Rüth", email = "julian.rueth@fsfe.org" },
]
dependencies = ["xonsh", "lazyasd", "ruamel.yaml", "github3.py >= 2", "bibtexparser", "setuptools"]

[project.urls]
Homepage = "https://github.com/regro/rever"
Documentation = "https://regro.github.io/rever-docs/"
Repository = "https://github.com/regro/rever.git"
Issues = "https://github.com/regro/rever/issues"
Changelog = "https://github.com/regro/rever/blob/master/CHANGELOG.rst"

[project.scripts]
rever = "rever.main:main"

[tool.setuptools]
packages = ["rever", "rever.activities"]

[tool.setuptools.package-data]
rever = ["*.xsh"]
"rever.activities" = ["*.xsh"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
"re-ver" = { path = ".", editable = true }

[tool.pixi.environments]
python-310 = ["test", "python-310"]
python-311 = ["test", "python-311"]
python-312 = ["test", "python-312"]
python-313 = ["test", "python-313"]
# "conda" does not really support Python 3.14 yet. See https://github.com/conda-forge/conda-feedstock/pull/277 so we cannot test with 3.14 yet. 
# python-314 = ["test", "python-314"]
dev = ["dev", "doc", "test", "python-313"]

[tool.pixi.feature.python-310.dependencies]
python = "3.10.*"

[tool.pixi.feature.python-311.dependencies]
python = "3.11.*"

[tool.pixi.feature.python-312.dependencies]
python = "3.12.*"

[tool.pixi.feature.python-313.dependencies]
python = "3.13.*"

[tool.pixi.feature.python-314.dependencies]
python = "3.14.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-flake8 = "*"
pytest-cov = "*"
pytest-timeout = "*"
pip = "*"
conda = "*"

[tool.pixi.feature.dev.dependencies]

[tool.pixi.feature.doc.dependencies]
sphinx = "*"
cloud_sptheme = "*"
numpydoc = "*"
make = "*"
pprintpp = "*"

[tool.pixi.feature.test.tasks]
test = "pytest tests"

[tool.pixi.feature.doc.tasks]
doc = { cmd = "make html", cwd = "docs" }
